--- a/SrsDocument/SnapBite.tex
+++ b/SrsDocument/SnapBite.tex
@@ -95,7 +95,7 @@
 
 % Other Nonfunctional Requirements section
 \newpage
-\section{Other Nonfunctional Requirements}
+\section{Nonfunctional Requirements}
 \subsection{Performance Requirements}
 % The quantitative attributes of the system such as response time, throughput, etc.
 
